--- a/src/scss/blocks/scrollbar/_scrollbar.scss
+++ b/src/scss/blocks/scrollbar/_scrollbar.scss
@@ -12,5 +12,5 @@ body::-webkit-scrollbar {
 body::-webkit-scrollbar-thumb {
 	border-radius: 2px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #123548;
+	background-color: #E93873;
 }
